tests/codegen/fail/unsupported_cleanup_match_build.stderr
error: tests/codegen/fail/unsupported_cleanup_match_build.ql:6:5: LLVM IR backend foundation does not support cleanup lowering yet
      defer first()
      ^^^^^^^^
error: tests/codegen/fail/unsupported_cleanup_match_build.ql:7:12: LLVM IR backend foundation does not support `match` lowering yet
      return match flag {
             ^^^^^^^^
